--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>Restaurant menu</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="module2-solution.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
